修改生成后台接口代码

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lchao": "bin/cli.js"
   },
   "scripts": {
-    "test": "jest"
+    "link": "npm link",
+    "publish": "npm publish"
   },
   "repository": {
     "type": "git",
