根据指令拆分文件

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ coverage
 
 /cypress/videos/
 /cypress/screenshots/
-package-lock.json
+pnpm-lock.yaml
 
 # Editor directories and files
 .vscode/*
